--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,8 +24,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    env:
+    - env:
         AMP_DOC_TOKEN: ${{ secrets.AMP_DOC_TOKEN }}
-    - run: npm ci
+    - run: npm ci  
     - run: npm run build --if-present
     - run: npm test
