--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - env:
         AMP_DOC_TOKEN: ${{ secrets.AMP_DOC_TOKEN }}
+    - run: npm install
     - run: npm ci  
     - run: npm run bootstrap  
     - run: npm run build --if-present
