--- a/.github/workflows/setup-python.yml
+++ b/.github/workflows/setup-python.yml
@@ -16,3 +16,8 @@ outputs:
 branding:
   icon: 'code'
   color: 'yellow'
+on:
+  push:
+    branches: [ preview ]
+  pull_request:
+    branches: [ future ]
